# finance-assistant

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: chat.py  news.py  portfolio.py  stocks.py
backend/app/core/: config.py  embeddings.py  llm.py  vectorstore.py
backend/app/models/: database.py  schemas.py
backend/app/services/: ingest_service.py  news_service.py  rag_service.py  stock_service.py
docs/architecture/: ADR-001-system-overview.md  ADR-002-tech-stack.md  ADR-003-vector-database.md  ADR-004-data-sources-apis.md
docs/planning/: claude-code-setup-prompt.md  phases-roadmap.md  sprint-plans.md
docs/study-notes/: 01-rag-fundamentals.md  02-vector-databases.md  03-embeddings.md  04-sprint1-implementation-learnings.md  05-yfinance-and-pandas.md  06-apscheduler.md
